<resources>
    <string name="app_name">Trener Mobilny</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profil">Profil</string>
    <string name="menu_dieta">Dieta</string>
    <string name="menu_trening">Trening</string>
    <string name="title_activity_diet">DietActivity</string>
    <string name="title_activity_training">TrainingActivity</string>

    <string name="Mezczyzna">Mężczyzna</string>
    <string name="Kobieta">Kobieta</string>
    <string name="Zapisz">Zapisz</string>
    <string name="Pleć">Płeć:</string>
    <string name="Wiek">Wiek:</string>
    <string name="Wzrost">Wzrost:</string>
    <string name="Waga">Waga:</string>
    <string name="WagęChcę">Wagę chcę:</string>
    <string name="Zmiejszyć">Zmiejszyć</string>
    <string name="Zwiększyć">Zwiększyć</string>
    <string name="Utrzymać">Utrzymać</string>


    <string-array name="Workouts">
        <item>Brak treningu</item>
        <item>Trening fbw dla początkujących</item>
        <item>Własny trenig</item>
    </string-array>


    <string name="Zakoncz_trening">Zakończ trening</string>
    <string name="Konfiguracja_trening">Konfiguracja treningu</string>
    <string name="Konfiguracja_obciążenia">Konfiguracja obciążenia</string>
    <string name="Zapisz_konfiguracje_obciążenia">Zapisz konfigurację obciążenia</string>
    <string name="Zapisz_konfiguracje_trening">Zapisz konfigurację treningu</string>

    <string name="TreningA">Trening A</string>
    <string name="Przysiady">Przysiady</string>
    <string name="WyciskanieLeżąc">Wyciskanie Leżąc</string>
    <string name="Wiosłowanie">Wiosłowanie</string>
    <string name="Wznosybokiem">Wznosy bokiem</string>
    <string name="Biceps">Biceps</string>
    <string name="Triceps">Triceps</string>
    <string name="Allahy">Allahy</string>
    <string name="Łydki">Łydki</string>
    <string name="Facepull">Facepull</string>

    <string name="TreningB">Trening B</string>
    <string name="MartwyCiągKlasyczny">Martwy Ciąg Klasyczny</string>
    <string name="WyciskanieŻołnierskie">Wyciskanie Żołnierskie</string>
    <string name="PodciąganieWąsko">Podciąganie Wąsko</string>
    <string name="WyciskanieWąsko">Wyciskanie Wąsko</string>
    <string name="Deska">Deska</string>
    <string name="YRaise">Y-Raise</string>

    <string name="TreningC">Trening C</string>
    <string name="TreningD">Trening D</string>

    <string name="Modyfikuj">Modyfikuj następny wariant treningu</string>

    <string name="Maksymalne_obciążenie">Twoje maksymalne obciążnie:</string>
    <string name="Przysiad">Przysiad:</string>
    <string name="WyciskanieLeżąc2">Wyciskanie Leżąc:</string>
    <string name="Wiosłowanie2">Wiosłowanie:</string>
    <string name="Wznosybokiem2">Wznosy bokiem:</string>
    <string name="Biceps2">Biceps:</string>
    <string name="Triceps2">Triceps:</string>
    <string name="Allahy2">Allah:</string>
    <string name="Łydki2">Łydki:</string>
    <string name="Facepull2">Facepull:</string>
    <string name="MartwyCiągKlasyczny2">Martwy Ciąg Klasyczny:</string>
    <string name="WyciskanieŻołnierskie2">Wyciskanie Żołnierskie:</string>
    <string name="PodciąganieWąsko2">Podciąganie Wąsko:</string>
    <string name="WyciskanieWąsko2">Wyciskanie Wąsko:</string>
    <string name="YRaise2">Y-Raise:</string>


    <string name="Serie">Serie</string>
    <string name="x">x</string>
    <string name="Powtórzenia">Powtórzenia</string>
    <string name="Info">Serie x powtórzenia x % max pow + prgresja (kg)</string>
    <string name="InfoPlank">Serie x sekundy + prgresja (sek)</string>
    <string name="Sekundy">Sekundy</string>

</resources>
