<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TrainingActivity"
    tools:showIn="@layout/app_bar_training">








    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinnerWorkouts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/linearLayoutTrainingA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/textViewTrainingA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TreningA" />

                <CheckBox
                    android:id="@+id/checkBoxSquats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/Przysiady"
                    android:visibility="visible" />

                <CheckBox
                    android:id="@+id/checkBoxBenchPress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/WyciskanieLeżąc" />

                <CheckBox
                    android:id="@+id/checkBoxRowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/Wiosłowanie" />

                <CheckBox
                    android:id="@+id/checkBoxRisingSideways"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/Wznosybokiem" />

                <CheckBox
                    android:id="@+id/checkBoxBiceps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/Biceps" />

                <CheckBox
                    android:id="@+id/checkBoxTriceps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/Triceps" />

                <CheckBox
                    android:id="@+id/checkBoxAllahs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/Allahy" />

                <CheckBox
                    android:id="@+id/checkBoxCalves"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/Łydki" />

                <CheckBox
                    android:id="@+id/checkBoxFacepull"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/Facepull" />

                <Button
                    android:id="@+id/buttonFinishWorkout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Zakoncz_trening" />
            </LinearLayout>


            <Button
                android:id="@+id/buttonTrainingConfiguration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Konfiguracja_trening" />

            <Button
                android:id="@+id/buttonWeightConfiguration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Konfiguracja_obciążenia" />

            <LinearLayout
                android:id="@+id/linearLayoutWeightConfiguration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMaxKg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Maksymalne_obciążenie" />

                <TextView
                    android:id="@+id/textViewSquat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Przysiad" />

                <EditText
                    android:id="@+id/editTextSquat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textViewBenchPress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/WyciskanieLeżąc2" />

                <EditText
                    android:id="@+id/editTextBenchPress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textViewRowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Wiosłowanie2" />

                <EditText
                    android:id="@+id/editTextRowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textViewRisingSideways"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Wznosybokiem2" />

                <EditText
                    android:id="@+id/editTextRisingSideways"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textViewBiceps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Biceps2" />

                <EditText
                    android:id="@+id/editTextBiceps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textViewTriceps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Triceps2" />

                <EditText
                    android:id="@+id/editTextTriceps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <Button
                    android:id="@+id/buttonSaveWeightConfiguration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Zapisz_konfiguracje_obciążenia" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>




